# judr

./: .gitignore  404.html  README.md  deck.ipynb  deck.slides.html  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  slide1.dio
docs/: index.md
search/: search_index.json
src/slides/: drawio.py
