[tool.poetry]
name = "slides"
version = "0.1.0"
description = "Setup for developing slides using Jupyter+Drawio"
authors = ["Vinay Chandrasekharan <vinay.cn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dev-dependencies]
jupyterlab = "^3"
jupyterlab-rise = "^0.41.0"
ipydrawio = "^1.3.0"
jupytext = "^1.15.2"
jupyter-contrib-nbextensions = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
